# arkzap-me

./: .env.example  Cargo.toml  README.md  diesel.toml
migrations/00000000000000_diesel_initial_setup/: up.sql
migrations/2025-08-30-195737_baseline/: down.sql  up.sql
migrations/2026-06-08-000000_add_arkade_receive/: down.sql  up.sql
migrations/2026-06-16-000000_add_custom_addresses/: down.sql  up.sql
migrations/2026-06-17-000000_custom_address_invoice_ark_payment_reference/: down.sql  up.sql
migrations/2026-06-18-000000_add_pending_invoice_id_indexes/: down.sql  up.sql
migrations/2026-06-18-000001_require_custom_address_invoice_expires_at/: down.sql  up.sql
src/: arkade.rs  barkd.rs  config.rs  main.rs  rate_limit.rs  routes.rs
src/models/: arkade_invoice.rs  arkade_zap.rs  custom_address.rs  invoice.rs  mod.rs  schema.rs
