[package]
name = "arkpay-me"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/benthecarman/arkpay-me"
homepage = "arkpay.me"
readme = "README.md"
description = "A LNURL server for Bark and Arkade"

[[bin]]
name = "arkpay-me"
path = "src/main.rs"

[dependencies]
ark-lib = { git = "https://gitlab.com/benthecarman/bark.git", branch = "lightning-receive-for-offline-user" }
bark-rest-client = { git = "https://gitlab.com/benthecarman/bark.git", branch = "lightning-receive-for-offline-user" }

anyhow = "1.0"
axum = "0.6.20"
bitcoin = { version = "0.32.7", features = ["serde"] }
clap = { version = "4.1.14", features = ["derive", "env"] }
chrono = { version = "0.4.26", features = ["serde"] }
diesel = { version = "2.1", features = ["postgres", "postgres_backend", "r2d2", "chrono", "numeric"] }
diesel_migrations = "2.1"
dotenv = "0.15.0"
lnurl-rs = { version = "0.9.0", default-features = false }
lightning-invoice = { version = "0.34.0", features = ["serde", "std"] }
log = "0.4"
nostr = { version = "0.40.0", default-features = false, features = ["nip57"] }
nostr-sdk = "0.40.0"
pretty_env_logger = "0.5.0"
reqwest = { version = "0.12", features = ["json"] }
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1.26.0", features = ["full"] }
tower-http = { version = "0.4.0", features = ["cors", "timeout"] }
hex = "0.4.3"
