[package]
name = "arkzap-me"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/benthecarman/arkzap-me"
homepage = "arkzap.me"
readme = "README.md"
description = "A LNURL server for Bark and Arkade"

[[bin]]
name = "arkzap-me"
path = "src/main.rs"

[dependencies]
ark-lib = { git = "https://gitlab.com/benthecarman/bark.git", rev = "276da0603372f8d5704cd2dcfd757af727d3b400" }
bark-rest-client = { git = "https://gitlab.com/benthecarman/bark.git", rev = "276da0603372f8d5704cd2dcfd757af727d3b400" }
ark-bdk-wallet = { git = "https://github.com/arkade-os/rust-sdk.git", rev = "4f5c2590923985459101edcfeefa77965efe280e" }
ark-client = { git = "https://github.com/arkade-os/rust-sdk.git", rev = "4f5c2590923985459101edcfeefa77965efe280e" }
ark-core = { git = "https://github.com/arkade-os/rust-sdk.git", rev = "4f5c2590923985459101edcfeefa77965efe280e" }

anyhow = "1.0"
async-trait = "0.1"
axum = "0.8.9"
bitcoin = { version = "0.32.7", features = ["serde"] }
clap = { version = "4.1.14", features = ["derive", "env"] }
chrono = { version = "0.4.26", features = ["serde"] }
diesel = { version = "2.1", features = ["postgres", "postgres_backend", "r2d2", "chrono", "numeric", "serde_json"] }
diesel_migrations = "2.1"
dotenv = "0.15.0"
lnurl-rs = { version = "0.9.0", default-features = false }
lightning-invoice = { version = "0.33.2", features = ["serde", "std"] }
log = "0.4"
nostr = { version = "0.44.3", default-features = false, features = ["nip57"] }
nostr-sdk = "0.44.1"
pretty_env_logger = "0.5.0"
reqwest = { version = "0.12", features = ["json"] }
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1.26.0", features = ["full"] }
tower-http = { version = "0.7.0", features = ["cors", "timeout"] }
hex = "0.4.3"
